# HighPerformance-AsyncLogSystem

./: .gitignore  CMakeLists.txt  README.md  benchmark_results_concurrent_queue.json  benchmark_results_mutex_queue.json  benchmark_results_useO2_withoutInternalLOG.json  benchmark_results_useO3_withoutInternalLOG.json  benchmark_results_use_fast_format.json  config.json  config.toml  example_http_sink.cpp  main.cpp  res_comparison_with_spdlog.txt  test_http_server.py
benchmark/: CMakeLists.txt  log_benchmark.cpp
cloud_server/: app.py
cloud_server/static/css/: app.css
cloud_server/static/js/: app.js
cloud_server/templates/: index.html
include/: CloudUploader.h  Config.h  ConfigManager.h  CoroutinePool.h  FastFormater.h  Helper.h  LogConfig.h  LogFormatter.h  LogMessage.h  LogQue.h  LogSystem.h  Logger.h  Logger_impl.h  Sink.h  enum.h
include/sink/: ConsoleSink.h  FileSink.h  HttpSink.h  LogSink.h  SinkManager.h
include/tool/: FastFormater.h  LogFormatter.h  Singleton.h  Utility.h
test/: CMakeLists.txt  CmakeLists.txt  Test_ConfigManager.cpp  Test_JsonHelper.cpp  Test_LogSystem.cpp  benchmark_result_comparison_mylogger  benchmark_results_comparison_spdlog  benchmark_results_log  comparison_mylogger.cpp  comparison_spdlog.cpp  comparison_with_spdlog.cpp  format_benchmark.cpp  log_benchmark.cpp  test_file_sink_rotate.cpp  test_log_config.cpp  test_log_formatter.cpp  test_log_queue.cpp  test_logger_level.cpp
test/results/: bench_res_comparison_mylogger  bench_res_comparison_spdlog  bench_res_format  bench_res_logSystem  test_res_ctest
